--- a/test/test000/styles.css
+++ b/test/test000/styles.css
@@ -79,9 +79,9 @@ body {
   font-size: .75em;
   white-space: nowrap;
   background-color: #DDDDDD;
-  -webkit-transition: max-height 0.5s, min-height 0.5s, padding 0.5s;
-  -moz-transition: max-height 0.5s, min-height 0.5s, padding 0.5s;
-  transition: max-height 0.5s, min-height 0.5s, padding 0.5s;
+  -webkit-transition: all 0.5s ease-in-out;
+  -moz-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
 }
 
 .body_shown {
