InitTut2: Extended tables and paragraph formatting.

--- a/web/tutorials/styles.css
+++ b/web/tutorials/styles.css
@@ -95,6 +95,26 @@ body {
   display: inline;
 }
 
+.linkPar:link {
+  color: #111;
+  text-decoration: underline;
+}
+
+.linkPar:visited {
+  color: #111;
+  text-decoration: underline;
+}
+
+.linkPar:hover {
+  color: #11F;
+  text-decoration: underline;
+}
+
+.linkPar:active {
+  color: #11F;
+  text-decoration: underline;
+}
+
 .codeTableScroll {
   border: 1px solid #888;
   overflow-x: auto;
@@ -110,6 +130,43 @@ body {
   padding: 0px;
   color: #111;
   font: 14px Consolas, Sans-Serif;
+  width: 100%;
+}
+
+.headerRow {
+  padding: 0px;
+  margin: 0px;
+}
+
+.headerCell {
+  padding: 0px 5px 0px 5px;
+  background-color: #CCC;
+  margin: 0px;
+}
+
+.tableHeader {
+  color: #111;
+  font-weight: bold;
+}
+
+.tableHeader a:link {
+  color: #111;
+  text-decoration: none;
+}
+
+.tableHeader a:visited {
+  color: #111;
+  text-decoration: none;
+}
+
+.tableHeader a:hover {
+  color: #111;
+  text-decoration: underline;
+}
+
+.tableHeader a:active {
+  color: #111;
+  text-decoration: underline;
 }
 
 .codeTableRow {
@@ -135,6 +192,7 @@ body {
   white-space: nowrap;
   padding: 0px 5px 0px 5px;
   margin: 0px;
+  width: 100%;
 }
 
 .codePart {
