--- a/web/tutorials/styles.css
+++ b/web/tutorials/styles.css
@@ -36,7 +36,7 @@ body {
   padding-bottom: 40px;
   color: #222;
   text-shadow: 0px 2px 3px #555555;
-  font: 30px Tahoma, Helvetica, Arial, Sans-Serif;
+  font: 32px Tahoma, Helvetica, Arial, Sans-Serif;
 }
 
 .textHeader {
@@ -225,4 +225,17 @@ body {
 .pageImage a:active {
   color: #111;
   text-decoration: underline;
+}
+
+.pageCanvas {
+  min-width: 64px;
+  min-height: 48px;
+  max-width: 640px;
+  max-height: 480px;
+  width: 100%;
+  height: 100%;
+  display: inline-block;
+  margin-left: 20px;
+  margin-bottom: 10px;
+  border: 1px solid #888;
 }
