InitTut3: Started writting tutorial 1.

--- a/web/tutorials/styles.css
+++ b/web/tutorials/styles.css
@@ -41,6 +41,7 @@ body {
 
 .textHeader {
   text-align: left;
+  padding-top: 20px;
   padding-bottom: 10px;
   color: #111;
   font: 28px Tahoma, Helvetica, Arial, Sans-Serif;
