--- a/web/styles.css
+++ b/web/styles.css
@@ -264,3 +264,16 @@ body {
   margin-bottom: 10px;
   border: 1px solid #888;
 }
+
+.pageLargeCanvas {
+  min-width: 64px;
+  min-height: 48px;
+  max-width: 1280px;
+  max-height: 960px;
+  width: 100%;
+  height: 100%;
+  display: inline-block;
+  margin-left: 20px;
+  margin-bottom: 10px;
+  border: 1px solid #888;
+}
